--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -227,6 +227,13 @@ P_B_2 : "فيديو"
 P_B_3 : "بث مباشر"
 P_B_4 : "عادي"
 
+PL_X_1 : "🚀 قائمة التشغيل"
+PL_X_2 : "「 تشغيلي  」"
+PL_X_3 : "「 التـحـكــم 」"
+PL_X_4 : "「 ★ السورس ★ 」"
+PL_X_5 : "「 التـحـكــم أونلاين 」"
+
+
 ST_B_1 : "مستخدمين مصرح لهم"
 ST_B_2 : "وضع التشغيل"
 ST_B_3 : "اللغة"
